--- a/portfolio.css
+++ b/portfolio.css
@@ -16,10 +16,16 @@ h1, h2, h3, h4 {
 }
 h1 {
     font-size: 96px;
+    line-height: 1.5;
+}
+h2{
+    font-size: 64px;
 }
 p{
     font-family: var(--default-font-family);
     font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
 }
 .hero {
     text-align: center;
@@ -38,7 +44,7 @@ p{
     font-family: var(--default-font-family);
     font-weight: normal;
     font-size: 24px;
-    line-height: 2;
+    line-height: 1.5;
     color: #272142;
 }
 .btn-branding {
@@ -49,4 +55,32 @@ p{
     line-height: 27px;
     padding: 15px 30px;
 
+}
+.btn-branding-outline {
+    border-radius: 4px;
+    color: var(--branding-color);
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+    border: 1px solid var(--branding-color);
+}
+.project-description{
+    padding: 120px 60px;
+}
+
+@media (max-width: 960px){
+    h1 {
+        font-size: 44px;
+        line-height: 2;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .hero {
+        padding: 80px 20px;
+    }
+    .project-description{
+        padding: 0;
+        text-align: center;
+    }
 }
