--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
 :root {
-    --branding-color: #6c63ff;
-    --secondary-color: #F9F7FE;
+    --branding-color: #1E3A5F;
+    --secondary-color: #F7F7F7;
     --heading-font-family: "Playfair Display", serif;
     --default-font-family:  "Poppins", sans-serif;
 }
@@ -10,7 +10,7 @@ body{
 }
 
 h1, h2, h3, h4 {
-    color: black;
+    color: #1E3A5F;
     font-family: var(--heading-font-family);
     font-weight: bold;
 }
@@ -26,6 +26,7 @@ p{
     font-weight: normal;
     font-size: 16px;
     line-height: 30px;
+    color: var(--branding-color);
 }
 .hero {
     text-align: center;
@@ -46,6 +47,23 @@ p{
     font-size: 24px;
     line-height: 1.5;
     color: #272142;
+}
+
+.about-section {
+    padding: 160px 20px;
+    
+}
+
+.about-section h1{
+    font-size: 64px;
+    line-height: 80px;
+}
+.about-section h2{
+    font-size: 18px;
+    font-family: var(--default-font-family);
+}
+.about-section-content {
+    margin: 30px;
 }
 .btn-branding {
     background: var(--branding-color);
@@ -82,5 +100,9 @@ p{
     .project-description{
         padding: 0;
         text-align: center;
+    }
+    .about-section {
+        text-align: center;
+        padding: 0;
     }
 }
