--- a/portfolio.css
+++ b/portfolio.css
@@ -1,26 +1,59 @@
 :root {
-    --branding-color: #1E3A5F;
-    --secondary-color: #F7F7F7;
-    --heading-font-family: "Playfair Display", serif;
+    --branding-color: #449C6F;
+    --secondary-color: #252e2d;
+    --heading-font-family: "Lilita One", sans-serif;
     --default-font-family:  "Poppins", sans-serif;
 }
 
 body{
     font-family: var(--default-font-family) ;
 }
+.logo {
+    max-width: 130px;
 
+}
+
+nav {
+    padding: 20px 0;
+}
+nav ul {
+    padding: 20px;
+    margin: 0;
+}
+nav li{
+    display: inline;
+    list-style: none;
+    line-height: 42px;
+    margin-left: 15px;
+
+}
+
+nav a {
+    text-decoration: none;
+    color: #252e2d;
+    transition: all 100ms ease-in-out;
+}
+
+nav a:hover{
+    color: var(--branding-color);
+}
+
+nav li.active a {
+    color: var(--branding-color);
+}
 h1, h2, h3, h4 {
-    color: #1E3A5F;
-    font-family: var(--heading-font-family);
-    font-weight: bold;
+    color: var(--secondary-color);
+    font-family: 'lilita one', sans-serif;
+    font-weight: normal;
 }
 h1 {
-    font-size: 96px;
-    line-height: 1.5;
+    font-size: 140px;
+    line-height: 1.3;
 }
 h2{
     font-size: 64px;
 }
+
 p{
     font-family: var(--default-font-family);
     font-weight: normal;
@@ -30,24 +63,18 @@ p{
 }
 .hero {
     text-align: center;
-    background: var(--secondary-color);
-    padding: 160px 20px;
+    background: #E7E7E3;
+    padding: 160px 15px;
 }
 
-.hero p{
-    font-size: 36px;
-    font-weight: bold;
-    margin: 0;
-    color: #272142;
-
-}
 .hero h2 {
-    font-family: var(--default-font-family);
+    font-family: var(--heading-font-family);
     font-weight: normal;
-    font-size: 24px;
-    line-height: 1.5;
-    color: #272142;
+    font-size: 34px;
+    line-height: 1.3;
+    color: #252e2d;
 }
+
 
 .content-container {
     padding: 160px 20px;
