--- a/portfolio.css
+++ b/portfolio.css
@@ -118,8 +118,18 @@ p{
     padding: 15px 30px;
     border: 1px solid var(--branding-color);
 }
+
 .project-description{
     padding: 120px 60px;
+}
+
+footer{
+    margin: 60px 0;
+}
+
+footer .social-links{
+    margin: 0 20px;
+    color: var(--branding-color);
 }
 
 footer .email-link {
@@ -128,6 +138,7 @@ footer .email-link {
     text-decoration: none;
     color: black;
 }
+
 footer .email-link:hover{
     color: var(--branding-color);
 }
