--- a/portfolio.css
+++ b/portfolio.css
@@ -84,6 +84,7 @@ p{
 .content h1{
     font-size: 64px;
     line-height: 80px;
+
 }
 .content-container h2{
     font-size: 18px;
@@ -101,6 +102,19 @@ p{
 .content p{
     font-size: 14px;
 }
+
+.contact-container{
+    text-align: center;
+    
+}
+
+.contact-container h1 {
+    font-size: 64px;
+}
+
+.contact-container h2 {
+    font-size: 20px;
+}
 .btn-branding {
     background: var(--branding-color);
     border-radius: 4px;
@@ -109,6 +123,11 @@ p{
     line-height: 27px;
     padding: 15px 30px;
 
+}
+.btn-branding:hover {
+    background: transparent;
+    border: 2px solid var(--branding-color); 
+    color: var(--branding-color); 
 }
 .btn-branding-outline {
     border-radius: 4px;
@@ -125,11 +144,18 @@ p{
 
 footer{
     margin: 60px 0;
+   
 }
 
-footer .social-links{
+.main-contact .social-links a,
+footer .social-links a{
     margin: 0 20px;
     color: var(--branding-color);
+    background-color: #E7E7E3 ;
+    padding: 10px 18px;
+    font-size: 30px;
+    border-radius: 50%;
+   
 }
 
 footer .email-link {
@@ -161,5 +187,12 @@ footer .email-link:hover{
     .content {
         text-align: center;
         padding: 0;
+    }
+
+}
+@media (max-width: 576px) {
+    .btn-branding {
+        font-size: 14px; /* Mniejszy tekst */
+        padding: 10px 20px; /* Mniejsze wymiary przycisku */
     }
 }
