--- a/portfolio.css
+++ b/portfolio.css
@@ -102,6 +102,19 @@ p{
 .content p{
     font-size: 14px;
 }
+.weather-image{
+    height: 480px; 
+    object-fit: cover;
+}
+
+
+.clock-image:hover,
+.weather-image:hover,
+.ai-image:hover {
+    opacity: 0.5;
+    transform: scale(1.05); 
+    transition: opacity 0.3s ease;
+}
 
 .contact-container{
     text-align: center;
