--- a/portfolio.css
+++ b/portfolio.css
@@ -77,7 +77,7 @@ p{
 
 
 .content-container {
-    padding: 160px 20px;
+    padding: 100px 20px;
     
 }
 
@@ -155,6 +155,17 @@ p{
     padding: 120px 60px;
 }
 
+.work-inquiry{
+    padding: 20px;
+    margin: 20px 60px;
+    background-color: #E7E7E3 ;
+    text-align: center;
+}
+.work-inquiry p{
+    text-align: start;
+    margin-left: 50px;
+    padding-left: 50px;
+}
 footer{
     margin: 60px 0;
    
